--- a/WhatFlower/Info.plist
+++ b/WhatFlower/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to Photo Library is needed for selecting pictures of flowers </string>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to Camera is need for taking pictures of flowers</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
